--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,31 +4,14 @@
     android:height="108dp"
     android:viewportHeight="108"
     android:viewportWidth="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+
+
+
+    <group android:name="group_1">
+        <path
+            android:name="path_3"
+            android:pathData="M 1490 6798 C 1490 6796 1728 6143 2018 5345 L 2545 3895 L 2806 3892 L 3067 3890 L 3593 5337 C 3883 6134 4120 6788 4120 6793 C 4120 6797 4027 6799 3914 6798 L 3708 6795 L 3566 6393 L 3425 5990 L 2171 5990 L 2152 6043 C 2141 6071 2077 6254 2009 6448 L 1885 6800 L 1688 6800 C 1579 6800 1490 6799 1490 6798 Z M 3300 5653 C 3300 5641 2808 4256 2801 4248 C 2797 4244 2683 4554 2546 4938 C 2409 5321 2295 5641 2292 5648 C 2289 5657 2393 5660 2794 5660 C 3072 5660 3300 5657 3300 5653 Z M 4560 5345 L 4560 3890 L 6480 3890 L 6480 4230 L 4950 4230 L 4950 5030 L 6480 5030 L 6480 5370 L 4950 5370 L 4950 6460 L 6480 6460 L 6480 6800 L 4560 6800 L 4560 5345 Z M 7090 5344 L 7090 3888 L 7623 3893 C 8210 3898 8235 3900 8422 3964 C 8661 4045 8852 4215 8935 4418 C 8985 4542 9006 4793 8979 4946 C 8917 5297 8666 5565 8300 5671 C 8179 5706 8024 5720 7744 5720 L 7480 5720 L 7480 6800 L 7090 6800 L 7090 5344 Z M 8120 5361 C 8249 5333 8347 5283 8425 5205 C 8598 5032 8641 4722 8523 4497 C 8477 4411 8408 4348 8305 4299 C 8174 4238 8114 4229 7778 4223 L 7480 4218 L 7480 5393 L 7753 5387 C 7975 5383 8042 5378 8120 5361 Z"
+            android:fillColor="#AACDF3"
+            android:strokeWidth="1"/>
+    </group>
 </vector>
