--- a/app/src/main/res/layout/item_batch_list.xml
+++ b/app/src/main/res/layout/item_batch_list.xml
@@ -38,6 +38,7 @@
         android:layout_height="30dp"
         android:layout_marginEnd="20dp"
         app:cardBackgroundColor="@color/red"
+        app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
